--- a/input.scss
+++ b/input.scss
@@ -25,7 +25,7 @@ $font_stack: 14px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 body {
   font: $font_stack;
-  background: #080e24 url("bg.jpg") repeat;
+  background: #080e24  repeat;
   color: #626668;
   div.wrap {
     width: 960px;
@@ -58,7 +58,7 @@ body {
   /* Atom System Styles */
   ul.quantum {
     position: relative;
-    height: 640px;
+    height: 810px;
     list-style: none;
     @include transition(0.09s);
     overflow: hidden;
@@ -68,7 +68,7 @@ body {
     display: block;
     position: absolute;
     border: 2px solid #394057;
-    /*    opacity: 0.7;*/
+
   }
   ul.quantum li span {
     display: block;
@@ -94,8 +94,8 @@ body {
     width: 40px;
     height: 40px;
     @include border-radius(20px);
-    background: #fc3;
-    background-image: -webkit-gradient( linear, left bottom, left top, color-stop(0.22, rgb(204,153,0)), color-stop(1, rgb(255,219,112)) );
+    background: #ff3366;
+    background-image: -webkit-gradient( linear, left bottom, left top, color-stop(0.62, rgb(255,0,0)), color-stop(1, rgb(255,219,112)) );
     background-image: -moz-linear-gradient( center bottom, rgb(204,153,0) 22%, rgb(255,219,112) 100% );
     top: 302px;
     left: 462px;
@@ -107,14 +107,16 @@ body {
     @include transition(0.2s);
   }
   ul.quantum li.atom span {
-    width: 60px;
-    height: 60px;
+    width: 20px;
+    height: 20px;
     @include border-radius(30px);
+
   }
   ul.quantum li.first {
-    width: 100px;
-    height: 100px;
+    width: 140px;
+    height: 120px;
     @include border-radius(52px);
+
     top: 270px;
     left: 430px;
     z-index: 99;
@@ -124,19 +126,7 @@ body {
     top: 10px;
     left: 10px;
   }
-  ul.quantum li.second {
-    width: 160px;
-    height: 160px;
-    @include border-radius(82px);
-    top: 240px;
-    left: 400px;
-    z-index: 98;
-  }
-  ul.quantum li.second span {
-    background: #bf8639;
-    top: 118px;
-    left: 5px;
-  }
+  
   ul#descriptions {
     position: absolute;
     top: 150px;
@@ -179,7 +169,7 @@ body {
     opacity: 0.9;
     left: -280px;
   }
-  /* CSS3 Animations */
+  /* CSS3 Animations  for the nucleus of quantum model*/
   ul.quantum li {
     -webkit-animation-iteration-count: infinite;
     -webkit-animation-timing-function: linear;
@@ -188,6 +178,7 @@ body {
     -moz-animation-timing-function: linear;
     -moz-animation-name: orbit;
   }
+  /* CSS3 Animations  for text display explaining the various models and energy level*/
   ul.quantum li.first {
     -webkit-animation-duration: 5s;
     -moz-animation-duration: 5s;
