--- a/main.css
+++ b/main.css
@@ -8,10 +8,11 @@
 
 body {
   font: 14px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  background: #080e24 url("bg.jpg") repeat;
+  background: #080e24 repeat;
   color: #626668;
   /* Atom System Styles */
-  /* CSS3 Animations */
+  /* CSS3 Animations  for the nucleus of quantum model*/
+  /* CSS3 Animations  for text display explaining the various models and energy level*/
 }
 body div.wrap {
   width: 960px;
@@ -43,7 +44,7 @@ body header p.disclaimer {
 }
 body ul.quantum {
   position: relative;
-  height: 640px;
+  height: 810px;
   list-style: none;
   -webkit-transition: all 0.09s ease-in;
   -moz-transition: all 0.09s ease-in;
@@ -56,7 +57,6 @@ body ul.quantum li {
   display: block;
   position: absolute;
   border: 2px solid #394057;
-  /*    opacity: 0.7;*/
 }
 body ul.quantum li span {
   display: block;
@@ -88,8 +88,8 @@ body ul.quantum li.atom {
   -webkit-border-radius: 20px;
   -moz-border-radius: 20px;
   border-radius: 20px;
-  background: #fc3;
-  background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0.22, #cc9900), color-stop(1, #ffdb70));
+  background: #ff3366;
+  background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0.62, red), color-stop(1, #ffdb70));
   background-image: -moz-linear-gradient(center bottom, #cc9900 22%, #ffdb70 100%);
   top: 302px;
   left: 462px;
@@ -104,15 +104,15 @@ body ul.quantum li.atom {
   transition: all 0.2s ease-in;
 }
 body ul.quantum li.atom span {
-  width: 60px;
-  height: 60px;
+  width: 20px;
+  height: 20px;
   -webkit-border-radius: 30px;
   -moz-border-radius: 30px;
   border-radius: 30px;
 }
 body ul.quantum li.first {
-  width: 100px;
-  height: 100px;
+  width: 140px;
+  height: 120px;
   -webkit-border-radius: 52px;
   -moz-border-radius: 52px;
   border-radius: 52px;
@@ -124,21 +124,6 @@ body ul.quantum li.first span {
   background: #b6bac5;
   top: 10px;
   left: 10px;
-}
-body ul.quantum li.second {
-  width: 160px;
-  height: 160px;
-  -webkit-border-radius: 82px;
-  -moz-border-radius: 82px;
-  border-radius: 82px;
-  top: 240px;
-  left: 400px;
-  z-index: 98;
-}
-body ul.quantum li.second span {
-  background: #bf8639;
-  top: 118px;
-  left: 5px;
 }
 body ul#descriptions {
   position: absolute;
